@@ -1,10 +1,10 @@
-#ifndef _BSD_BINRESVPORT_H
-#define _BSD_BINRESVPORT_H
+#ifndef _BSD_BINDRESVPORT_H
+#define _BSD_BINDRESVPORT_H
 
 #include "config.h"
 
-#ifndef HAVE_BINRESVPORT_AF
+#ifndef HAVE_BINDRESVPORT_AF
 int bindresvport_af(int sd, struct sockaddr *sa, int af);
-#endif /* !HAVE_BINRESVPORT_AF */
+#endif /* !HAVE_BINDRESVPORT_AF */
 
-#endif /* _BSD_BINRESVPORT_H */
+#endif /* _BSD_BINDRESVPORT_H */
