@@ -1,3 +1,6 @@
+20000725
+ - (djm) Fix autoconf typo: HAVE_BINRESVPORT_AF -> HAVE_BINDRESVPORT_AF
+
 20000721
  - (djm) OpenBSD CVS updates:
    - markus@cvs.openbsd.org  2000/07/16 02:27:22
